[package]
name = "forester"
version = "0.0.1"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mbillingr/forester"
repository = "https://github.com/mbillingr/forester"
documentation = "https://github.com/mbillingr/forester"
description = """
Experimental templated randomized forests of trees.
"""

[features]
profiling = ["cpuprofiler"]

[dependencies]
cpuprofiler = { version = "0.0.3", optional = true }  # this is a dev-dependency, but those can't be optional
rand = "0.4"

[dev-dependencies]
criterion = { version = "0.2", default-features = false }
gnuplot = "0.0.24"
image = "0.18"


[[bench]]
name = "benchmark"
harness = false


[[example]]
name = "extra_trees_regressor"
path = "examples/extra_trees_regressor.rs"

[[example]]
name = "extra_trees_classifier"
path = "examples/extra_trees_classifier.rs"

[[example]]
name = "rotational_classifier"
path = "examples/rotational_classifier.rs"


[[example]]
name = "profile1"
path = "examples/profile1.rs"
