[package]
name = "forester"
version = "0.0.3"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]
license = "MIT"
#homepage = "https://github.com/mbillingr/forester"
repository = "https://github.com/mbillingr/forester"
documentation = "https://docs.rs/forester/"
description = """
A crate for implementing various flavors of random forests and decision trees.
"""
categories = ["science"]
keywords = ["machine-learning", "random forest", "decision tree", "ensemble", "tree"]
#maintenance = { status = "experimental" }


[dependencies]
cpuprofiler = { version = "0.0.3", optional = true }  # this is a dev-dependency, but those can't be optional
num-traits = "0.2"
rand = "0.5"

[dev-dependencies]
#criterion = { version = "0.2", default-features = false }
#gnuplot = "0.0.24"
#image = "0.18"
#ndarray = "0.11"


#[[bench]]
#name = "benchmark"
#harness = false

#[[bench]]
#name = "partition"
#harness = false

#[[bench]]
#name = "treepredict"
#harness = false
